SONARPY-1800 NonCallableCallCheck migration: Use the display name of the new type model (#1777)